--- a/index.css
+++ b/index.css
@@ -159,7 +159,7 @@ header a:hover{
         height: 30vh;
 }
 #Lineas-Familiares .Linea-paterna .image-container{
-    background-image: url("Linea\ personal.png");
+    background-image: url("Linea\ FP.png");
         background-size: cover;
         background-position: center center;
         height: 30vh;
