--- a/index.css
+++ b/index.css
@@ -191,7 +191,7 @@ header a:hover{
 }
 
 #Linea-nacional .image-container{
-    background-image: url("Linea\ personal.png");
+    background-image: url("Linea\ Nacional.png");
         background-size: cover;
         background-position: center center;
         height: 30vh;
