--- a/index.css
+++ b/index.css
@@ -128,7 +128,7 @@ header a:hover{
 }
 
 #Linea-personal .image-container{
-    background-image: url("Linea\ personal.png");
+    background-image: url("Linea_personal.png");
         background-size: cover;
         background-position: center center;
         height: 30vh;
@@ -153,13 +153,13 @@ header a:hover{
 }
 
 #Lineas-Familiares .Linea-materna .image-container{
-    background-image: url("Linea\ FM.png");
+    background-image: url("Linea_FM.png");
         background-size: cover;
         background-position: center center;
         height: 30vh;
 }
 #Lineas-Familiares .Linea-paterna .image-container{
-    background-image: url("Linea\ FP.png");
+    background-image: url("Linea_FP.png");
         background-size: cover;
         background-position: center center;
         height: 30vh;
@@ -191,7 +191,7 @@ header a:hover{
 }
 
 #Linea-nacional .image-container{
-    background-image: url("Linea\ Nacional.png");
+    background-image: url("Linea_Nacional.png");
         background-size: cover;
         background-position: center center;
         height: 30vh;
