--- a/index.css
+++ b/index.css
@@ -113,6 +113,16 @@ header a:hover{
     padding: 200px 12px;    
 }
 
+#Que_son{
+    text-align: center;
+    padding: 200px 12px;    
+}
+
+#Para-que{
+    text-align: center;
+    padding: 200px 12px;    
+}
+
 #Linea-personal{
     text-align: center;
     color: white;
