--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ h3{ font-size: 3em; margin-block-end: 0px;}
 p{ font-size: 3em;}
 p1{font-size: 0.8em;}
 ul{ list-style: none;}
-li{ font-size: 1.25em;}
+
 
 button{
     font-size: 1.25em;
@@ -113,7 +113,7 @@ header a:hover{
     padding: 200px 12px;    
 }
 
-#Que_son{
+#Que-son{
     text-align: center;
     padding: 200px 12px;    
 }
