--- a/index.css
+++ b/index.css
@@ -17,6 +17,7 @@ h3{ font-size: 3em; margin-block-end: 0px;}
 p{ font-size: 3em;}
 p1{font-size: 0.8em;}
 ul{ list-style: none;}
+li{font-size: 2.5em;}
 
 
 button{
