--- a/index.css
+++ b/index.css
@@ -275,6 +275,43 @@ footer .container{
         padding-bottom: 0;
         padding-right: 20px;
     }
+    
+  #Que-son .container{
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+    #Que-son .text{
+        width: 50%;
+        max-width: 600px;
+        text-align: initial;
+        padding-left: 30px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    #Que-son .img-container{
+        background-image: url("Vecindad.png");
+        background-size: cover;
+        background-position: center center;
+        height: 500px;
+        width: 400px; 
+    }
+
+    #Para-que{
+        background-image: url("Lista.png");
+        background-repeat: no-repeat;
+        background-size: 500px 400px;
+        background-position: calc(100vw - 500px) 120px;
+    }
+
+    #Para-que .container{
+        text-align: initial;
+    }
+
+    #Para-que ul{
+        margin-left: 100px;
+    }
 }
 @media (min-width: 1200px) {
     #caracteristicas{
