--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ body{
 h1{ font-size: 5em;}
 h2{ font-size: 4.5em; text-align: center;margin-block-start: 5px;}
 h3{ font-size: 3em; margin-block-end: 0px;}
-h4{ font-size: 2.2em; text-align: center;margin-block-start: 5px;}
+h4{ font-size: 2.2em; text-align: initial;margin-block-start: 5px;}
 p{ font-size: 3em;}
 p1{font-size: 0.8em;}
 ul{ list-style: none;}
@@ -116,7 +116,7 @@ header a:hover{
 }
 
 #Que-son{
-    text-align: center;
+    text-align: initial;
     padding: 200px 12px;    
 }
 
