--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ body{
 h1{ font-size: 5em;}
 h2{ font-size: 4.5em; text-align: center;margin-block-start: 5px;}
 h3{ font-size: 3em; margin-block-end: 0px;}
-h4{ font-size: 2.1em; text-align: center;margin-block-start: 5px;}
+h4{ font-size: 2.1em; margin-block-end: 0px;}
 p{ font-size: 3em;}
 p1{font-size: 0.8em;}
 ul{ list-style: none;}
@@ -280,16 +280,13 @@ footer .container{
   #Que-son .container{
         display: flex;
         justify-content: space-evenly;
-        background-image: url("Vecindad.png");
-       background-size: cover;
-        background-position: center center;
     }
 
     #Que-son .img-container{
         background-image: url("Vecindad.png");
         background-size: cover;
         background-position: center center;
-        height: 500px;
+        height: 800px;
         width: 400px; 
     }
 
