--- a/index.css
+++ b/index.css
@@ -286,14 +286,16 @@ footer .container{
         background-image: url("Vecindad.png");
         background-size: cover;
         background-position: center center;
-        height: 500px;
-        width: 700px; 
+        height: 400px;
+        width: 3000px; 
     }
 
     #Para-que{
         background-image: url("Lista.png");
-        background-repeat: no-repeat;
-        background-size: 500px 400px
+        background-size: cover;
+        background-position: end end;
+        height: 400px;
+        width: 3000px;
         
     }
 
