--- a/index.css
+++ b/index.css
@@ -290,10 +290,10 @@ footer .container{
         width: 3000px; 
     }
 
-    #Para-que{
+    #Para-que. img-conteiner{
         background-image: url("Lista.png");
         background-size: cover;
-        background-position: end end;
+        background-position: right center;
         height: 400px;
         width: 3000px;
         
