--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ body{
 h1{ font-size: 5em;}
 h2{ font-size: 4.5em; text-align: center;margin-block-start: 5px;}
 h3{ font-size: 3em; text-align: center;margin-block-start: 5px;}
-h4{ font-size: 2.1em; text-align: center;}
+h4{ font-size: 2.1em; text-align: center; font-weight: normal}
 p{ font-size: 3em;}
 p1{font-size: 0.8em;}
 ul{ list-style: none;}
